# libarea51-template

./: APKBUILD  Makefile.in  configure  configure.ac  configure.lineno
include/area51/: template.h
lib/: Makefile.in
lib/template/: free.c  get.c  handler.c  init.c  load.c  lock.c  new.c  permanent.c  template-int.h
lib/template/charbuffer/: append.c
lib/template/renderer/: renderer.c  scan.c  tagHandler.c
